Basic localization done.

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -1,5 +1,9 @@
 {
     "Home": "Home",
     "Portfolio": "Portfolio",
-    "About": "About"
+    "About": "About",
+    "Our Portfolio": "Our Portfolio",
+    "Discover our work": "Discover our work",
+    "About us": "About us",
+    "Who we are and what we are doing": "Who we are and what we are doing"
 }
