--- a/src/locales/en/index.json
+++ b/src/locales/en/index.json
@@ -1,8 +1,4 @@
 {
     "Different Experience":"Different Experience",
-    "Enjoy a new modern fire": "Enjoy a new modern fire",
-    "Our Portfolio": "Our Portfolio",
-    "Discover our work": "Discover our work",
-    "About us": "About us",
-    "Who we are and what we are doing": "Who we are and what we are doing"
+    "Enjoy a new modern fire": "Enjoy a new modern fire"
 }
