--- a/src/locales/sk/index.json
+++ b/src/locales/sk/index.json
@@ -1,8 +1,4 @@
 {
     "Different Experience":"Objav zmenu",
-    "Enjoy a new modern fire": "Spoznaj nový typ moderného ohňa",
-    "Our Portfolio": "Naše portfólio",
-    "Discover our work": "Zoznám sa s našimi produktami",
-    "About us": "O nás",
-    "Who we are and what we are doing": "Kto sme a čo robíme"
+    "Enjoy a new modern fire": "Spoznaj nový typ moderného ohňa"
 }
