--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -5,5 +5,19 @@
     "Our Portfolio": "Our Portfolio",
     "Discover our work": "Discover our work",
     "About us": "About us",
-    "Who we are and what we are doing": "Who we are and what we are doing"
+    "Who we are and what we are doing": "Who we are and what we are doing",
+    "Seo_Description_Home": "Building customized firetables based on personal wishes.",
+    "Seo_Keywords_Home":"firetable, fire pit, different fire",
+    "Seo_Description_Portfolio": "Products that we make.",
+    "Seo_Keywords_Portfolio":"firetable, fire pit, portfolio",
+    "Seo_Description_About": "Some basic information about our company.",
+    "Seo_Keywords_About":"firetable, fire pit, about us",
+    "Name": "Name",
+    "Email": "Email",
+    "Message": "Message",
+    "Phone": "Phone",
+    "Address": "Address",
+    "Submit": "Submit",
+    "Clear": "Clear",
+    "Message sent": "Your message has been sent. Thank you!"
 }
