--- a/src/locales/sk/common.json
+++ b/src/locales/sk/common.json
@@ -5,5 +5,19 @@
     "Our Portfolio": "Naše portfólio",
     "Discover our work": "Zoznámte sa s našimi produktami",
     "About us": "O nás",
-    "Who we are and what we are doing": "Kto sme a čo robíme"
+    "Who we are and what we are doing": "Kto sme a čo robíme",
+    "Seo_Description_Home": "Výroba stolov s ohniskom na zakázku.",
+    "Seo_Keywords_Home":"stôl s ohniskom, stoly s ohniskom, betónové stoly",
+    "Seo_Description_Portfolio": "Produkty, ktoré vyrábame.",
+    "Seo_Keywords_Portfolio":"stôl s ohniskom, stoly s ohniskom, betónové stoly, portfólio",
+    "Seo_Description_About": "Základné informácie o našej firme.",
+    "Seo_Keywords_About":"stôl s ohniskom, stoly s ohniskom, betónové stoly, o nás",
+    "Name": "Meno",
+    "Email": "Email",
+    "Message": "Správa",
+    "Phone": "Telefón",
+    "Address": "Adresa",
+    "Submit": "Odoslať",
+    "Clear": "Zrušiť",
+    "Message sent": "Vaša správa bola odoslaná, ďakujeme!"
 }
