Unused pictures removed.

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -19,5 +19,6 @@
     "Address": "Address",
     "Submit": "Submit",
     "Clear": "Clear",
-    "Message sent": "Your message has been sent. Thank you!"
+    "Message sent": "Your message has been sent. Thank you!",
+    "Slovakia": "Slovakia"
 }
