--- a/src/locales/sk/common.json
+++ b/src/locales/sk/common.json
@@ -19,5 +19,6 @@
     "Address": "Adresa",
     "Submit": "Odoslať",
     "Clear": "Zrušiť",
-    "Message sent": "Vaša správa bola odoslaná, ďakujeme!"
+    "Message sent": "Vaša správa bola odoslaná, ďakujeme!",
+    "Slovakia": "Slovensko"
 }
