--- a/src/locales/sk/portfolio.json
+++ b/src/locales/sk/portfolio.json
@@ -1,5 +1,7 @@
 {
     "portfolio_content": "<p>Kombinácia stola a plynového ohniska v harmónii. Nemusíte riešiť kompromis ak chcete sedieť v teple okolo ohňa a mať si kde položiť pohárik či niečo na zahryznutie, alebo sa porozprávať s priateľmi a rodinou. Stôl s integrovaným ohniskom je žiarivým príkladom.</p>",
-    "portfolio_table_header": "Betónový stôl s ohniskom",
-    "portfolio_table_content": "<p>Tento výnimočný stôl je vyrobený z vysokopevného kompozitného betónu, vystuženého kari sieťou, ktorý odoláva poveternostným vplyvom a zachováva si vysokú životnosť a farebnú stálosť. Napájanie plynom zabezpečuje bežná propánová alebo propán-butánová plynová fľaša. Stôl je dizajnovaný tak, aby sa plynová fľaša dala vložiť dovnútra stola.</p><p>Vyskúšajte FIRETABLE produkty s garanciou spokojnosti!</p>" 
+    "portfolio_concrete_table_header": "Betónový stôl s ohniskom",
+    "portfolio_concrete_table_content": "<p>Tento výnimočný stôl je vyrobený z vysokopevného kompozitného betónu, vystuženého kari sieťou, ktorý odoláva poveternostným vplyvom a zachováva si vysokú životnosť a farebnú stálosť. Napájanie plynom zabezpečuje bežná propánová alebo propán-butánová plynová fľaša. Stôl je dizajnovaný tak, aby sa plynová fľaša dala vložiť dovnútra stola.</p><p>Vyskúšajte FIRETABLE produkty s garanciou spokojnosti!</p>",
+    "portfolio_quartz_table_header": "Žulový stôl s ohniskom",
+    "portfolio_quartz_table_content": "<p>Stôl možno vyrobiť podľa predstáv zákazníka so žulou, umelým kameňom alebo mramorom na vrchu.</p>"
 }
