--- a/src/locales/sk/index.json
+++ b/src/locales/sk/index.json
@@ -1,4 +1,4 @@
 {
-    "Different Experience":"Objav zmenu",
+    "Customized Firetables":"Stoly s ohniskom na mieru",
     "Enjoy a new modern fire": "Spoznaj nový typ moderného ohňa"
 }
