--- a/src/locales/en/index.json
+++ b/src/locales/en/index.json
@@ -1,4 +1,4 @@
 {
-    "Different Experience":"Different Experience",
+    "Customized Firetables":"Customized Firetables",
     "Enjoy a new modern fire": "Enjoy a new modern fire"
 }
